[package]
name = "instruction-ordering"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "instruction_ordering"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
blake3 = "=1.7.0"
proc-macro-crate = "=3.0.0"
indexmap = "=2.2.6"
unicode-segmentation = "=1.12.0"

